# OperatingSystemWHW

./: .gitignore  BackgroundCommand.cpp  ChangeDirCommand.cpp  ChpromptCommand.h  CommandExecutor.cpp  CommandExecutor.h  Commands.h  CommandsHistory.h  ExternalCommand.cpp  ExternalCommand.h  ForegroundCommand.cpp  ForegroundCommand.h  GetCurrentDirectoryCommand.cpp  HistoryCommand.h  KillCommand.cpp  KillCommand.h  LsCommand.h  Makefile  PipeCommand.h  QuitCommand.h  SmallShell.h  smash.cpp
HW1/: BackgroundCommand.cpp  BackgroundCommand.h  BuiltInCommand.cpp  BuiltInCommand.h  CMakeLists.txt  CatCommand.cpp  CatCommand.h  ChangeDirCommand.cpp  ChangeDirCommand.h  ChpromptCommand.cpp  CommandExecutor.cpp  Commands.cpp  Commands.h  CommandsHistory.cpp  CommandsHistory.h  ForegroundCommand.cpp  ForegroundCommand.h  GetCurrentDirectoryCommand.h  HistoryCommand.cpp  JobsCommand.cpp  JobsCommand.h  JobsList.cpp  JobsList.h  KillCommand.cpp  KillCommand.h  LsCommand.cpp  Makefile  PipeCommand.cpp  QuitCommand.cpp  README.md  RedirectionCommand.cpp  RedirectionCommand.h  ShowPidCommand.cpp  ShowPidCommand.h  SmallShell.cpp  test.py
HW1/tests/: run_tests.sh  test_cd1.in  test_cp1.exp.processed  test_cp1.in  test_dest_1.txt  test_dest_2.txt  test_dest_3.txt  test_fg1.in  test_pwd1.in  test_redirection1.in  test_showpid.in  test_src_2.txt  test_src_3.txt
HW2/: Makefile  file.txt  update_kernel_from_clion.sh
HW3/: Makefile  big.txt  favorite.html  logger.h  message.c  message.h  message_queue.c  message_queue.h  request.c  request.h  segel.c  segel.h  server.c  submitters.txt  (+3 more)
(+20 files in other folders)
